@@ -5,12 +5,10 @@
 #
 #  mode:
 #    values:
-#     * auto: use any option possible (growpart or parted)
+#     * auto: use any option possible (any available)
 #             if none are available, do not warn, but debug.
 #     * growpart: use growpart to grow partitions
 #             if growpart is not available, this is an error.
-#     * parted: use parted (parted resizepart) to resize partitions
-#             if parted is not available, this is an error.
 #     * off, false
 #
 # devices:
